# solana-workflow

./: .gitignore  README.md  package.json
programs/single-choice/src/: lib.rs
programs/single-choice/src/instructions/: vote.rs
programs/single-choice/src/states/: tmp_vote_data.rs  vote_data.rs
programs/solana-workflow/: Cargo.toml
programs/solana-workflow/src/: lib.rs
programs/solana-workflow/src/instructions/: change_variable.rs  cpi.rs  create_mission.rs  create_workflow.rs  mod.rs  new_mission.rs  vote.rs
programs/solana-workflow/src/pda/: mission.rs  mod.rs  workflow.rs
programs/squads/: Cargo.toml
programs/squads-mpl/: Cargo.toml
programs/squads-mpl/src/: account.rs  errors.rs  lib.rs  state.rs
programs/squads/src/: account.rs  instructions.rs  lib.rs
tests/: solana-workflow.ts
